# test_fs

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: lint.yml
DE/: README.md  debug.py
DE/dags/: dag1.py
data/: apidata.py  asyncio_f.py  docker-compose.yaml  interfaces.py  kaggle_s3.py
flask/: flaskblog.py
flask/templates/: about.html  home.html  layout.html
io/: client.py  server.py
models/training/: reg_model.py
static/: script.js  style.css
templates/: index.html
utility_apps/: anaconda.bat  data_transform_email.py  remove_spaces_files.py  rename_image_files.py
