[tool.poetry]
name = "test-fs"
version = "0.1.0"
description = ""
authors = ["Ranadheer <radr314@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
gunicorn = "^23.0.0"
python-gitlab = "^5.3.0"
numpy = "^2.2.2"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.38"
psycopg2 = "^2.9.10"
google-auth = "^2.38.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.163.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
